--- a/style.css
+++ b/style.css
@@ -10,45 +10,62 @@ body {
 
 
 
-header{
+header {
     width: 100%;
     position: absolute;
-    box-sizing: border-box;
 }
 @media screen and (max-width: 767px) {
-   header { padding-top: 15px;
-            padding-bottom: 15px;
-   }
+    header { 
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
 @media screen and (max-width: 1080px ) {
     header {
-    background-color: #fff;
+        background-color: #fff;
+        z-index: 10;
     }
 }    
-    
-.header-container{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    align-items: center;
+header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
     word-break: break-all;
     box-sizing: border-box;
-}
-@media screen and (max-width: 767px) {
+    display: block;
+} 
+
+@media screen and (max-width:767px) {
     .header-container {
         max-width: 100%;
         margin: 0 20px;
     }
 }
-.title{
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 36px 0 36px;
+    max-width: 100%;
+    position: relative;
+    word-break: break-all;
+    box-sizing: border-box;
+}
+
+@media screen and (min-width:768px) {
+    .header-logo {
+        transition: opacity 0.2s;
+    }
+}
+a {
     color: #000;
     text-decoration: none;
     word-break: break-all;
     box-sizing: border-box;
 }
-.title:-webkit-any-link {
+a :-webkit-any-link {
     cursor:pointer;
 }
+
 @media screen and (min-width: 767px) {
     .header-logo_image--pc {
         display: block;
@@ -63,11 +80,20 @@ header{
     height: 20px;
     width: auto;
 }
+img {
+    border: 0;
+    vertical-align: middle;
+    word-break: break-all;
+    box-sizing: border-box;
+}
+
+
 @media screen and (max-width: 767px) {
     .header-logo_image--sp {
         display: block;
     }
 }
+
 @media screen and (min-width: 767px) {
     .header-logo_image--sp {
         display: none;
@@ -81,8 +107,16 @@ header{
 img {
     border: 0;
     vertical-align: middle;
+    word-break: break-all;
     box-sizing: border-box;
 }
+
+.header-container>*:last-child {
+    display: inline-flex;
+    word-break: break-all;
+    box-sizing: border-box;
+}
+
 
 .menu-btn {
     position: fixed;
@@ -235,51 +269,67 @@ img {
     
 }
 
+@media screen and (max-width:767px) {
+    main {
+        padding-top: 52px;
+    }
+}
+@media screen and (max-width:1080px) {
+    main {
+        padding-top: 60px;
+    }
+}
+main {
+    display: block;
+    word-break: break-all;
+    box-sizing: border-box;
+}
+
+
+
 .first-view{
+    background-image: url(https://camp.potepan.com/wp-content/themes/potepancamp/assets/images/home/first-view/top-hero.jpg);
     background-size: cover;
     background-position:center;
+    padding-top: 100px;
+    padding-bottom: 28px;
+    word-break: break-all;
     box-sizing: border-box;
-
 }
-@media screen and (max-width: 767px) {
+section {
+    display: block;
+}
+@media screen and (max-width:767px) {
     .first-view {
-    background-image: none;
-    padding-top: 0;
-    padding-bottom: 35px;
+        background-image: none;
+        padding-top: 0;
+        padding-bottom: 35px;
     }
 }
-@media screen and (min-width:767px) {
-    .first-view {
-        background-image: url(https://camp.potepan.com/wp-content/themes/potepancamp/assets/images/home/first-view/top-hero.jpg);
-        background-size: cover;
-        background-position:center;
-        padding-top: 100px;
-        padding-bottom: 28px;
-        box-sizing: border-box;
 
-    }
-    
+
+.first-view_main-image {
+    display: none;
 }
 .first-view_main-image {
     width: 100%;
+}
+img {
     border: 0;
     vertical-align: middle;
+    margin: 0;
+    padding: 0;
+    word-break: break-all;
     box-sizing: border-box;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width:767px) {
     .first-view_main-image {
         display: block;
     }
+}
 
-}
-@media screen and (min-width:767px) {
-    .first-view_main-image {
-        display: none;
-        width: 100%;
-        vertical-align: middle;
-    }
-    
-}
+
+
 .first-view_container{
     max-width: 1140px;
     padding-left: 50px;
@@ -301,7 +351,13 @@ img {
 .first-view_content{
     margin-bottom: 70px;
     width: fit-content;
+}
+.first-view_content{
+    margin: 0;
+    padding: 0;
+    word-break: break-all;
     box-sizing: border-box;
+    display: block;
 }
 @media screen and (max-width: 767px) {
     .first-view_content{
@@ -309,6 +365,7 @@ img {
         width: 100%;
     }
 }
+
 .first-view_content_title{
     color:black;
     font-family: 'Lato', sans-serif;
@@ -317,8 +374,19 @@ img {
     line-height: 54px;
     margin-bottom: 15px;
     text-align: center;
+}
+.first-view_content_title {
+    margin: 0;
+    padding: 0;
+    word-break: break-all;
     box-sizing: border-box;
-
+}
+h2 {
+    display: block;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 @media screen and (max-width:767px) {
     .first-view_content_title {
@@ -326,10 +394,17 @@ img {
         line-height: 36px;
     }
 }
+
+
 .first-view_content_images {
     margin-bottom: 25px;
+}
+.first-view_content_images {
+    margin: 0;
+    padding: 0;
     word-break: break-all;
     box-sizing: border-box;
+    display: block;
 }
 @media screen and (max-width:767px) {
     .first-view_content_images {
@@ -339,16 +414,19 @@ img {
     width: 100%;
     box-sizing: border-box;
     }
-
 }
+
 .first-view_content_images img {
     margin-right: 8px;
+}
+img {
     border: 0;
     vertical-align: middle;
+    margin: 0;
+    padding: 0;
     word-break: break-all;
     box-sizing: border-box;
 }
-
 @media screen and (max-width:767px) {
     .first-view_content_images img{
     width: 27.5%;
@@ -356,28 +434,22 @@ img {
 
 .first-view_content_images img:nth-of-type(2) {
     width: 40%;
-    margin-right: 8px;
-    vertical-align: middle;
-    box-sizing: border-box;
+}
 
-}
-@media screen and (max-width:767px) {
-    .first-view_content_images img:nth-of-type(2) {
-        width:27.5%
-    }
-    
-}
 .first-view_content_images img:last-of-type {
     margin-right: 0;
-    vertical-align: middle;
-    box-sizing: border-box;
 }
 
 
 
 .first-view_content_buttons {
     display: flex;
-    box-sizing: border-box
+}
+.first-view_content_buttons {
+    margin: 0;
+    padding: 0;
+    word-break: break-all;
+    box-sizing: border-box;
 }
 @media screen and (max-width:767px) {
     .first-view_content_buttons {
@@ -386,32 +458,18 @@ img {
 }
 
 
-    
-
-.first-view_content_buttons a:first-of-type {
-    margin-right: 15px;
-    width: 306px;
-}
-
-@media screen and (max-width:767px) {
-    .first-view_content_buttons a:first-of-type {
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
-    
-}
-
 .first-view_content_buttons a {
 
     align-items: center;
-    color: white;
-    font-size: 16px;
     background-color: #F79214;
+    color: white;
     border: none;
     border-radius: 38px;
+    color: white;
     cursor: pointer; 
     display: flex;
     flex-direction: column;
+    font-size: 16px;
     font-weight: 700;
     justify-content: center;
     text-decoration: none;
@@ -426,8 +484,18 @@ img {
         font-size: 14px;
         width: 100% !important;
     }
-    
 }
+.first-view_content_buttons a:first-of-type {
+    margin-right: 15px;
+    width: 306px;
+}
+@media screen and (max-width:767px) {
+    .first-view_content_buttons a:first-of-type {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+}
+
 
 .first-view_content_buttons a:last-of-type {
     background-color: #fff;
@@ -440,7 +508,6 @@ img {
     .first-view_content_buttons a:last-of-type {
         height: 45px;
     }
-    
 }
 
 
@@ -450,13 +517,7 @@ img {
 
 
 
-.first-view_content_buttons a:last-of-type {
-    background-color: #fff;
-    border: 1px solid #E0E0E0;
-    color: #000;
-    width: 176px;
 
-}
 
 
 
